FIxed illegal serial number ghost entries.

--- a/assets/html/fatal_error.html
+++ b/assets/html/fatal_error.html
@@ -2,7 +2,7 @@
 <html lang=en>
 	<head>
 		<meta charset=utf-8>
-		<link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="<?php echo conf('subdirectory')?>assets/css/bootstrap.min.css">
 		<title>Munkireport | Fatal error</title>
 	</head>
 	<body style="padding-top: 20px">
